Make sure and force Java 11 compatible